<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>blue_nav2</name>
    <version>0.5.0</version>
    <description>Blue Nav2 plugins</description>

    <maintainer email="ognjen.cadovski@robbit.rs">Ognjen Cadovski</maintainer>
    <license>MIT</license>

    <url type="repository">https://github.com/Robotic-Decision-Making-Lab/blue.git</url>
    <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/blue/issues</url>

    <author>Ognjen Cadovski</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>

    <!-- This recursively depends on a set of common linters -->
    <test_depend>ament_lint_common</test_depend>

    <depend>builtin_interfaces</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>nav2_core</depend>
    <depend>nav2_costmap_2d</depend>
    <depend>nav2_util</depend>
    <depend>nav2_msgs</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>pluginlib</depend>
    <depend>std_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
        <nav2_core plugin="${prefix}/goal_checker_3d_plugin.xml" />
        <nav2_core plugin="${prefix}/progress_checker_3d_plugin.xml" />
        <nav2_core plugin="${prefix}/pure_pursuit_controller_3d_plugin.xml" />
        <nav2_core plugin="${prefix}/straight_line_planner_3d_plugin.xml" />
    </export>
</package>
